// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Issue #263: Resend Email Delivery & Templates > Template Rendering & Snapshot Testing > renders failure notification template v1 with error details and version headers 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="x-template-version" content="v1">
  <title>[Stellar Alerts] Alert Delivery Failure Notice</title>
  <style>
    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background-color: #0f172a; color: #f8fafc; margin: 0; padding: 24px; }
    .card { max-width: 600px; margin: 0 auto; background: #1e293b; border-radius: 12px; padding: 32px; border: 1px solid #ef4444; }
    .header { border-bottom: 1px solid #334155; padding-bottom: 16px; margin-bottom: 24px; }
    .title { color: #f87171; font-size: 20px; font-weight: bold; margin: 0; }
    .row { display: flex; justify-content: space-between; margin-bottom: 12px; font-size: 14px; }
    .label { color: #94a3b8; font-weight: 500; }
    .value { color: #f1f5f9; font-family: monospace; word-break: break-all; }
    .reason { background: #450a0a; border: 1px solid #991b1b; padding: 12px; border-radius: 6px; color: #fca5a5; font-family: monospace; font-size: 13px; margin: 16px 0; }
    .footer { margin-top: 32px; border-top: 1px solid #334155; padding-top: 16px; font-size: 12px; color: #64748b; text-align: center; }
    .footer a { color: #38bdf8; text-decoration: none; }
  </style>
</head>
<body>
  <div class="card">
    <div class="header">
      <h1 class="title">⚠️ Alert Delivery Failure</h1>
    </div>
    <div class="row">
      <span class="label">Alert Job ID:</span>
      <span class="value">job_dlq_001</span>
    </div>
    <div class="row">
      <span class="label">Transaction Hash:</span>
      <span class="value">0xDEADBEEF</span>
    </div>
    <div class="row">
      <span class="label">Failure Timestamp:</span>
      <span class="value">2026-09-23T12:05:00Z</span>
    </div>
    <div class="reason">
      <strong>Failure Detail:</strong><br>HTTP 500 Server Error on webhook target endpoint
    </div>
    <div class="footer">
      <p>Template Version: v1 | Generated by Stellar Alerts System</p>
      <p>To manage email alerts or unsubscribe, visit your <a href="https://stellar-alerts.org/settings/notifications">Notification Preferences</a>.</p>
    </div>
  </div>
</body>
</html>"
`;

exports[`Issue #263: Resend Email Delivery & Templates > Template Rendering & Snapshot Testing > renders payment receipt template v1 with version headers and escaped fields 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="x-template-version" content="v1">
  <title>[Stellar Alerts] Payment Received: 250.00 USDC</title>
  <style>
    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background-color: #0f172a; color: #f8fafc; margin: 0; padding: 24px; }
    .card { max-width: 600px; margin: 0 auto; background: #1e293b; border-radius: 12px; padding: 32px; border: 1px solid #334155; }
    .header { border-bottom: 1px solid #334155; padding-bottom: 16px; margin-bottom: 24px; }
    .title { color: #38bdf8; font-size: 20px; font-weight: bold; margin: 0; }
    .row { display: flex; justify-content: space-between; margin-bottom: 12px; font-size: 14px; }
    .label { color: #94a3b8; font-weight: 500; }
    .value { color: #f1f5f9; font-family: monospace; word-break: break-all; }
    .footer { margin-top: 32px; border-top: 1px solid #334155; padding-top: 16px; font-size: 12px; color: #64748b; text-align: center; }
    .footer a { color: #38bdf8; text-decoration: none; }
  </style>
</head>
<body>
  <div class="card">
    <div class="header">
      <h1 class="title">⚡ Stellar Payment Notification</h1>
    </div>
    <div class="row">
      <span class="label">Amount:</span>
      <span class="value" style="color: #4ade80; font-weight: bold;">250.00 USDC</span>
    </div>
    <div class="row">
      <span class="label">Payment ID:</span>
      <span class="value">pay_999_&lt;script&gt;</span>
    </div>
    <div class="row">
      <span class="label">Transaction Hash:</span>
      <span class="value">0x1234567890abcdef</span>
    </div>
    <div class="row">
      <span class="label">From Address:</span>
      <span class="value">GUSER1234567890</span>
    </div>
    <div class="row"><span class="label">Asset Issuer:</span><span class="value">GA5ZSEJYB37JRC5AVCIA5MOP4RHTM335WFOPVQOI3M7G73X2D4J80000</span></div>
    <div class="row">
      <span class="label">Received At:</span>
      <span class="value">2026-09-23T12:00:00Z</span>
    </div>
    <div class="footer">
      <p>Template Version: v1 | Generated by Stellar Alerts</p>
      <p>To manage email alerts or unsubscribe, visit your <a href="https://stellar-alerts.org/settings/notifications">Notification Preferences</a>.</p>
    </div>
  </div>
</body>
</html>"
`;
